<resources>
    <string name="app_name">E-Vet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_store_drawer">StoreDrawerActivity</string>
    <string name="title_activity_doctor_drawer">DoctorDrawerActivity</string>
    <string name="Addproblems">Add Problems</string>
    <string name="Doctor">Doctor</string>
    <string name="Medicines">Medicines</string>
    <string name="Diseases">Diseases</string>
    <string name="Growth">Growth</string>
    <string name="Cart">Cart</string>
    <string name="History">History</string>
    <string name="UserManual">User Manual</string>
    <string name="Settings">Settings</string>
    <string name="Logout">Log Out</string>
    <string name="LatestUpdates">Latest Updates</string>
    <string name="ChangeLanguage">Change Language</string>
    <string name="AboutUs">About us</string>
    <string name="PDRegisterTital">Registering Account</string>
    <string name="PDRegisterMessage">Please Wait....</string>
    <string name="PDLoginTital">Log in</string>
    <string name="PDLoginMessage">Please Wait....</string>
    <string name="English">English</string>
    <string name="Urdu">اردو</string>
    <string name="postdescription">Post Description...</string>
    <string name="comments">Comments...</string>
    <string name="postedat">Posted at :</string>
    <string name="developers">Developers:</string>
    <string name="amirhamza">Amir Hamza</string>
    <string name="faisalsaleem">Faisal Saleem</string>
    <string name="umerbilal">M. Umer Bilal</string>
    <string name="aboutus">About Us</string>
    <string name="commentstool">Comments</string>
    <string name="pleaseenterhere">Please Enter Here...</string>
    <string name="nocomments">No Comments</string>
    <string name="badWordsUsed">Bad Words Used</string>
    <string name="cart">Cart</string>
    <string name="rs">Rs. </string>
    <string name="total">Total:</string>
    <string name="checkout">Checkout</string>
    <string name="pleaseEnterAddress">Please Enter Address</string>
    <string name="loading">Loading...</string>
    <string name="pleaseWait">Please Wait...</string>
    <string name="status">Status</string>
    <string name="successfullyPlaceYourOrder">Successfully Place Your Order</string>
    <string name="oK">OK</string>
    <string name="deliveryDetails">Delivery Details</string>
    <string name="deliveryTime">Delivery Time</string>
    <string name="fastDeliveryTimewithnominalcharges">Fast Delivery Time with nominal charges</string>
    <string name="paymentMethod">Payment Method</string>
    <string name="cashOnDelivery">Cash On Delivery</string>
    <string name="bycompletingthisorderIagreetoalltermsandconditions">By completing this order, I agree to all terms and conditions.</string>
    <string name="agree">I agree and request that you execute the ordered service before the end of revocation period. I am aware of that after complete fulfilment of the service I lose my right of recission.</string>
    <string name="plaseorder">PLACE YOUR ORDER</string>
    <string name="appointmentsHistory">Appointments History</string>
    <string name="clients">Clients</string>
    <string name="cancelAppointment">Cancel Appointment</string>
    <string name="appointmentCancel">Appointment Cancel</string>
    <string name="notAccepted">Not Accepted</string>
    <string name="acceptAppointment">Accept Appointment</string>
    <string name="appointmentAccepted">Appointment Accepted</string>
    <string name="startNavigation">Start Navigation</string>
    <string name="navigationMessage">Navigation Message</string>
    <string name="unbletoTraceyourlocation">Unble to Trace your location</string>
    <string name="pleaseTurnONyourGPSConnection">Please Turn ON your GPS Connection</string>
    <string name="yes">Yes</string>
    <string name="no">NO</string>
    <string name="waitLocation">Please Wait While getting Your Location, Make sure your GPS and Internet is on !!!</string>
    <string name="acceptAppointmentDoc">Accept Appointment</string>
    <string name="cancelAppointmentDoc">Cancel Appointment</string>
    <string name="medicines">Medicines</string>
    <string name="Pending">Pending</string>
    <string name="approved">Approved</string>
    <string name="approvedMedicines">Approved Medicines</string>
    <string name="pendingMedicines">Pending Medicines</string>
    <string name="profileSettings">Profile Settings</string>
    <string name="pleaseEnterPhoneNo">Please Enter Phone No</string>
    <string name="pleaseEnterEmail">Please Enter Email</string>
    <string name="pleaseEnterName">Please Enter Name</string>
    <string name="updatingAccount">Updating Account</string>
    <string name="successfullyUpdatedYourAccount">Successfully Updated Your Account</string>
    <string name="Done">Done</string>
    <string name="Update">Update</string>
    <string name="orderHistory">Order History</string>
    <string name="orders">Orders</string>
    <string name="myProducts">My Products</string>
    <string name="addItems">Add Items</string>
    <string name="appointments">Appointments</string>
    <string name="add">ADD</string>
    <string name="userProblems">Users Problems</string>
    <string name="searchProblems">Search Problems...</string>
    <string name="searchMedicine">Search Medicine...</string>
    <string name="appointdoctor">Appoint Doctor</string>
    <string name="Orders">Orders</string>
    <string name="Cancel">Cancel</string>
    <string name="Accept">Accept</string>
    <string name="Edit">Edit</string>
    <string name="Price">Price: </string>
    <string name="Quantity">Quantity: </string>
    <string name="Name">Name</string>
    <string name="Pricee">Price</string>
    <string name="Delete">Delete</string>
    <string name="UserName">User Name</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="Address">Address</string>
    <string name="SignUp">Sign Up</string>
    <string name="SignIn">Sign In</string>
    <string name="MobileNumber">Mobile Number</string>
    <string name="wsycc">We will send you a conformation code</string>
    <string name="stvyi">shortly to verify your identity</string>
    <string name="Next">Next</string>
    <string name="VerificationCode">Verification Code</string>
    <string name="wjsycc">We just send you a conformation code</string>
    <string name="styneb">shortly to your number.Enter Below:</string>
    <string name="Verify">Verify</string>
    <string name="Time">Time: </string>
    <string name="Date"> Date: </string>
    <string name="Client">Client</string>
    <string name="Store">Store</string>
    <string name="forgetpassword">Forget Pasword?</string>
    <string name="Doctors">Doctors</string>
    <string name="Foodname">Food name:</string>
    <string name="Usage">Usage:</string>
    <string name="Animalame">Animal Name</string>
    <string name="NewPassword">New Password</string>
    <string name="pdnswo">Please Do Not Share With Others</string>
    <string name="oului">Otherwise You Lose Your Identity</string>
    <string name="prtqow">Please Rate the quality of work</string>
    <string name="givefeedbackhere">Give FeedBack Here...</string>
    <string name="send">Send</string>
    <string name="FeedBack">FeedBack</string>
    <string name="Introduction">Introduction:</string>
    <string name="Symptoms">Symptoms:</string>
    <string name="Causes">Causes:</string>
    <string name="Treatment">Treatment:</string>
    <string name="Vieworders">View Orders</string>
    <string name="typehere">Type Here...</string>
    <string name="Description">Description</string>
    <string name="Upload">Upload</string>
    <string name="commentedat"> Commented on: </string>
    <string name="UserProblems">User Problems</string>
    <string name="pleaseEnterPassword">"Please Enter Password"</string>
    <string name="pleaseGiveCorrectinfo">Please Give Correct Info</string>
    <string name="ForgetPassword">Forget Password</string>
    <string name="invaildnumber">Invalid Phone Number...</string>
    <string name="entercode">Please Enter Code</string>
    <string name="Codeverification">Code Verification</string>
    <string name="pwwwavyc">Please Wait, while we are verifing your Code</string>
    <string name="updatingPassword">Updating Password</string>
    <string name="spu">Successfully Password Updates</string>
    <string name="Phoneverification">Phone Verification</string>
    <string name="pwwaaun">Please Wait, while we are authenticating your number...</string>
    <string name="SubmittingFeedback">Submitting Feedback</string>
    <string name="ssf">Successfully Submitted FeedBack</string>
    <string name="DiseasesDescription">Diseases Description</string>
    <string name="DiseaseCategory">Disease Category</string>
    <string name="DiseaseList">Disease List</string>
    <string name="SuccessfullyAddedProblem">Successfully Added Problem</string>
    <string name="RegisterAccount">Register Account</string>
    <string name="emailcheck">Please Enter Valid Email</string>
    <string name="Srya">Successfully Register Your Account</string>
    <string name="erroraccount">Error While Registering Your Account Please Try Again</string>
    <string name="history">History</string>
    <string name="Remove">Remove</string>
    <string name="areyousure">Are you sure??</string>
    <string name="customerProfile">Customer Profile</string>
    <string name="AddItems">Add Items</string>
    <string name="PleaseEnterName">Please Enter Name</string>
    <string name="PleaseEnterPrice">Please Enter Price</string>
    <string name="Addingyourproduct">Adding your product</string>
    <string name="SuccessfullyAddedItem">Successfully Added Item</string>
    <string name="EditProduct">Edit Product</string>
    <string name="Updatingyourproduct">Updating your product</string>
    <string name="suyp">Successfully updated your product</string>
    <string name="sdyp">Successfully delete your product</string>
    <string name="coh">Client Orders History</string>
    <string name="MyOrders">My Orders</string>
    <string name="MyOrderDetails">My Order Details</string>
    <string name="OrderAccepted">Order Accepted</string>
    <string name="DeleteOrder">Delete Order</string>
    <string name="OrderCancel">Order Cancel</string>
    <string name="ClientHistory">Client History</string>
    <string name="Appointment">Appointment</string>
    <string name="DoctorAppointCancel">Doctor Appoint Cancel</string>
    <string name="AppointingDoctor">Appointing Doctor</string>
    <string name="DoctorAppointSuccessfully">Doctor Appoint Successfully</string>
    <string name="ApprovedAppointments">Approved Appointments</string>
    <string name="PendingAppointments">Pending Appointments</string>
    <string name="AnimalsList">Animals List</string>
    <string name="IncreaseMeet">Increase Meat</string>
    <string name="IncreaseMilk">Increase Milk</string>
    <string name="commenting">Commenting</string>
    <string name="bcto">By completing this order, I agree to all terms and conditions.</string>
    <string name="storee">Store: </string>
    <string name="PleaseSelect">Please Select</string>
    <string name="Call">Call</string>
    <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
</resources>