<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add_post"
            android:icon="@drawable/navprroblems"
            android:title="@string/Addproblems" />
        <item
            android:id="@+id/nav_doctor"
            android:icon="@drawable/navdoctor"
            android:title="@string/Doctor"
            />
        <item
            android:id="@+id/nav_medicine"
            android:icon="@drawable/navmedicines"
            android:title="@string/Medicines" />
        <item
            android:id="@+id/nav_diseases"
            android:icon="@drawable/navdisease"
            android:title="@string/Diseases" />
        <item
            android:id="@+id/nav_growth"
            android:icon="@drawable/navgrowth"
            android:title="@string/Growth" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/navcart"
            android:title="@string/Cart" />
        <item
            android:id="@+id/nav_Histroy"
            android:icon="@drawable/navhistory"
            android:title="@string/History" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/navsettings"
            android:title="@string/Settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/navlogout"
            android:title="@string/Logout" />

    </group>



</menu>
