<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_doctor_userproblems"
            android:icon="@drawable/navprroblems"
            android:title="@string/Addproblems" />
        <item
            android:id="@+id/nav_doctor_appointments"
            android:icon="@drawable/navclient"
            android:title="@string/appointments" />
        <item
            android:id="@+id/nav_doctor_medicine"
            android:icon="@drawable/navmedicines"
            android:title="@string/Medicines" />
        <item
            android:id="@+id/nav_doctor_cart"
            android:icon="@drawable/navcart"
            android:title="@string/Cart" />
        <item
            android:id="@+id/nav_doctor_settings"
            android:icon="@drawable/navsettings"
            android:title="@string/Settings" />
        <item
            android:id="@+id/nav_doctor_history"
            android:icon="@drawable/navhistory"
            android:title="@string/History" />
        <item
            android:id="@+id/nav_doctor_logout"
            android:icon="@drawable/navlogout"
            android:title="@string/Logout" />
    </group>


</menu>
