<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_store_addItems"
            android:icon="@drawable/nav_store_additems"
            android:title="@string/addItems" />
        <item
            android:id="@+id/nav_store_myproducts"
            android:icon="@drawable/nav_store_order_history"
            android:title="@string/myProducts" />
        <item
            android:id="@+id/nav_store_orders"
            android:icon="@drawable/nav_store_order"
            android:title="@string/orders" />
        <item
            android:id="@+id/nav_store_orderHistory"
            android:icon="@drawable/nav_store_order_history"
            android:title="@string/orderHistory" />
        <item
            android:id="@+id/nav_store_settings"
            android:icon="@drawable/navsettings"
            android:title="@string/Settings" />
        <item
            android:id="@+id/nav_store_logout"
            android:icon="@drawable/navlogout"
            android:title="@string/Logout" />
    </group>


</menu>
