<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserSection.PhoneVerificationsActivity.RegisterActivity"
    android:background="@color/pdlg_color_gray"
    >
    <include layout="@layout/toolbar_for_all"
        android:id="@+id/register_toolbar">
    </include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/profileicon"
            android:id="@+id/img_profile_register"
            />
        <EditText
            android:id="@+id/edtsignupusername"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/novasquare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/UserName"
            android:textColor="@android:color/white"
            android:drawableLeft="@drawable/ic_user_outline_black_24dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/input_style"
            android:inputType="text"
            android:padding="8dp"
            android:textColorHint="@android:color/white"
            />

        <EditText
            android:id="@+id/edtsignupemail"
            android:fontFamily="@font/novasquare"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@drawable/input_style"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:layout_marginTop="5dp"
            />

        <EditText
            android:id="@+id/edtsignuppassword"
            android:fontFamily="@font/novasquare"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:drawableLeft="@drawable/ic_lock_open_black_24dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@drawable/input_style"
            android:inputType="textPassword"
            android:padding="8dp"
            android:layout_marginTop="5dp"
            />
        <TextView
            android:id="@+id/edtsignupphone"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/novasquare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/PhoneNumber"
            android:textColor="@android:color/white"
            android:drawableLeft="@drawable/ic_phone_android_black_24dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/input_style"
            android:inputType="phone"
            android:padding="8dp"
            android:textColorHint="@android:color/white"
            />

        <EditText
            android:id="@+id/edtsignAddress"
            android:fontFamily="@font/novasquare"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Address"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:drawableLeft="@drawable/ic_address_city_black_24dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@drawable/input_style"
            android:inputType="text"
            android:padding="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            />
        <Button
            android:id="@+id/btnSignUpCreate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/SignUp"
            android:fontFamily="@font/novasquare"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@android:color/black"
            android:textAllCaps="false"
            android:background="@drawable/button_style"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btnHaveAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SignIn"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/button_style"
        android:textColor="@android:color/black"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:textAllCaps="false"
        android:fontFamily="@font/novasquare"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>