<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:background="@color/pdlg_color_gray"
    tools:context=".AboutUs.AboutUSActivity">
    <include
        android:id="@+id/about_us_toolbar"
        layout="@layout/toolbar_for_all">

    </include>

    <ImageView
        android:id="@+id/Image"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_below="@id/about_us_toolbar"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/uoglogo" />

    <TextView
        android:id="@+id/dev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Image"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/developers"
        android:textColor="@color/golden"
        android:textSize="30dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dev"
        android:orientation="vertical"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:drawableLeft="@drawable/ic_user_outline_black_24dp"
            android:fontFamily="@font/novasquare"
            android:hint="@string/amirhamza"
            android:inputType="text"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:drawableLeft="@drawable/ic_user_outline_black_24dp"
            android:fontFamily="@font/novasquare"
            android:hint="@string/umerbilal"
            android:inputType="text"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:drawableLeft="@drawable/ic_user_outline_black_24dp"
            android:fontFamily="@font/novasquare"
            android:hint="@string/faisalsaleem"
            android:inputType="text"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>